# requesto-py

./: .gitignore  README.md  Test Results - Linux Mint 21.2.html  Test Results.md  changelog.md  main.py  pyproject.toml  qodana.yaml  sqlitetest  test.py  tests.md
.github/workflows/: codeov.yaml  qodana_code_quality.yml
Writerside2/: d.tree  redirection-rules.xml  writerside.cfg
Writerside2/topics/: faq.md  manuals.md  quickstart.md  start.md  welcome.md
docs/: conf.py  faq.rst  index.rst  index2.rst  lang.md  manuals.rst  quickstart.rst  start.rst  welcome.rst
docs/en/: faq.md  manuals.md  quickstart.md  start.md  welcome.md
docs/ru/: faq.md  manuals.md  quickstart.md  start.md  welcome.md
src/: __init__.py  requesto.py  test.ipynb  test.py
src/requesto/: Exceptions.py  MySqlDb.py  PostgresDb.py  SqliteDb.py  User.py  __init__.py  requesto.py  user.py
temp/en/: start.md
temp/ru/: start.md  welcome.md
tests/: Test Results - Linux Mint 21.2.1.1.0.html  Test Results - Linux Mint 21.2.xml  Test Results Windows 10.html  Test Results Windows 10.xml
tests/integration/: connection_test.py  database_test.py  table_test.py
tests/unit/: columnNames.py  fetch_test.py  insert_test.py  tables.py  update_test.py
